--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "The laravel form builder code generator",
   "main": "index.htm",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,11 +30,20 @@
     "url": "https://github.com/4xmen/laravel-form-builder/issues"
   },
   "homepage": "https://github.com/4xmen/laravel-form-builder#readme",
+  "devDependencies": {
+    "cross-env": "^6.0.3",
+    "laravel-mix": "^4.0.7",
+    "laravel-mix-purgecss": "^4.2.0",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0"
+  },
   "dependencies": {
     "highlightjs": "^9.12.0",
     "jquery": "^3.4.1",
+    "resolve-url-loader": "3.1.0",
     "semantic-ui-css": "^2.4.1",
     "vazir-font": "^21.0.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.11"
   }
 }
