--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-         "illuminate/support": "7.0"
+        "php": "^8.0.2",
+         "illuminate/support": "^7.x"
     },
     "require-dev": {
         "orchestra/testbench": "^3.8|^4.0|^5.0",
