--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.0.2",
-         "illuminate/support": "^7.x"
+         "illuminate/support": "^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^3.8|^4.0|^5.0",
